Changed styling to match main page

--- a/FormStyle.css
+++ b/FormStyle.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: linear-gradient(to right top, #2d8a24, #00744f, #005b62, #003f5a, #05253c, #05253c, #05253c, #05253c, #003f5a, #005b62, #00744f, #2d8a24);
+    background-color: rgb(180, 25, 110);
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
